--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>React Test2</title>
+    <link href="build/css/ratchet.css" rel="stylesheet">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+
+    <!-- Makes your prototype chrome-less once bookmarked to your phone's home screen -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+
 </head>
 <body>
-<p>Hello</p>
 <div id="mount-point"></div>
-
 <script src="build/bundle.js"></script>
 </body>
 </html>
