--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-<div id="mount-point"></div>
+<div id="mount-point" style="width:100%;height: 100%;"></div>
 <script src="build/bundle.js"></script>
 </body>
 </html>
