--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>React Test2</title>
-    <link href="build/css/ratchet.css" rel="stylesheet">
+    <link href="css/ratchet.css" rel="stylesheet">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 
     <!-- Makes your prototype chrome-less once bookmarked to your phone's home screen -->
@@ -14,6 +14,6 @@
 </head>
 <body>
 <div id="mount-point" style="width:100%;height: 100%;"></div>
-<script src="build/bundle.js"></script>
+<script src="bundle.js"></script>
 </body>
 </html>
