--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Makes your prototype chrome-less once bookmarked to your phone's home screen -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
+    <script src="libs/jquery.min.js"></script>
 
 </head>
 <body>
