--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-<div id="mount-point" style="width:100%;height: 100%;"></div>
+<div id="mount-point" style="width:100%;height: 100%"></div>
 <div id="overlay-container" style="display: none"></div>
 <script src="bundle.js"></script>
 </body>
