--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>React Test2</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <title>React Test-mui</title>
     <link href="css/main.css" rel="stylesheet"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 
