--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>React Test-mui</title>
     <!--<link href="css/fonts/material-icons.css" rel="stylesheet"/>-->
+    <link href="css/mui.min.css" rel="stylesheet"/>
     <link href="css/main.css" rel="stylesheet"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 
