intermediate flex box

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>React Test-mui</title>
-    <!--<link href="css/fonts/material-icons.css" rel="stylesheet"/>-->
+    <link href="css/fonts/material-icons.css" rel="stylesheet"/>
     <link href="css/material.min.css" rel="stylesheet"/>
     <link href="css/main.css" rel="stylesheet"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
