--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>React Test-mui</title>
-    <link href="css/fonts/material-icons.css" rel="stylesheet"/>
     <link href="css/material.min.css" rel="stylesheet"/>
     <link href="css/main.css" rel="stylesheet"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
@@ -12,7 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <script src="libs/jquery.min.js"></script>
-    <script src="libs/material.min.js"></script>
+    <!--<script src="libs/material.min.js"></script>-->
 </head>
 <body>
 <div id="mount-point" style="width:100%;height: 100%"></div>
