--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div id="mount-point" style="width:100%;height: 100%"></div>
-<div id="overlay-container" style="display: none"></div>
+<div id="overlay-container" ></div>
 <script src="bundle.js"></script>
 </body>
 </html>
